--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <body>
       <h1>m4rkop0l0's HTML Intro</h1>
 <img src="https://avatars.githubusercontent.com/u/99757693?v=4">
-
+<ul>
+    <li><a href="https://www.royalcaribbean.com/">Royal Caribbean</a></li>
+    <li><a href="https://www.royalcaribbeanblog.com/">Royal Caribbean Blog</a></li>
+    <li><a href="https://www.youtube.com/">YouTube</a></li>
   </body>
 
 </html>
