--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <body>
       <h1>m4rkop0l0's HTML Intro</h1>
 <img src="https://avatars.githubusercontent.com/u/99757693?v=4">
-
+      
+<ul>
+    <li>Royal Caribbean</li>
+    <li>Royal Caribbean Blog</li>
+    <li>YouTube</li>
+    
   </body>
 
 </html>
