--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <ol>
           <li>Royal Caribbean</li>
           <li>Royal Caribbean Blog</li>
-          <li>Youtube</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       </ol>
       
 <img src="https://avatars.githubusercontent.com/u/99757693?v=4">
